--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ spring.profiles.active: dev
 
 #开启springboot的debug模式
 #通过启用 debug=true属性；来让控制台打印自动配置报告，这样我们就可以很方便的知道哪些自动配置类生效；
-debug: true
+#debug: true
 
 #日志
 # logger, to see logback-spring.xml
@@ -145,4 +145,27 @@ securityconfig:
             /user/** = HJ;
             #/**/edit/** = admin,editor;
             #/**/delete/** = admin
+  
+############################################    Actuator  ##############################################################################
+  management:
+    port: 9001  #对外暴露的REST API接口的端口号 不指定为应用程序启动端口号
+    security:
+      enabled: false  #为了能够在浏览器展示效果不做安全验证
+ 
+          ###############################      提供的13个接口        ##########################
+#2018-12-07 16:13:23 INFO o.s.w.s.h.AbstractHandlerMethodMapping$MappingRegistry[543]: Mapped "{[/auditevents || /auditevents.json],methods=[GET],produces=[application/vnd.spring-boot.actuator.v1+json || application/json]}" onto public org.springframework.http.ResponseEntity<?> org.springframework.boot.actuate.endpoint.mvc.AuditEventsMvcEndpoint.findByPrincipalAndAfterAndType(java.lang.String,java.util.Date,java.lang.String)
+#2018-12-07 16:13:23 INFO o.s.w.s.h.AbstractHandlerMethodMapping$MappingRegistry[543]: Mapped "{[/beans || /beans.json],methods=[GET],produces=[application/vnd.spring-boot.actuator.v1+json || application/json]}" onto public java.lang.Object org.springframework.boot.actuate.endpoint.mvc.EndpointMvcAdapter.invoke()
+##2018-12-07 16:13:23 INFO o.s.w.s.h.AbstractHandlerMethodMapping$MappingRegistry[543]: Mapped "{[/env/{name:.*}],methods=[GET],produces=[application/vnd.spring-boot.actuator.v1+json || application/json]}" onto public java.lang.Object org.springframework.boot.actuate.endpoint.mvc.EnvironmentMvcEndpoint.value(java.lang.String)
+#2018-12-07 16:13:23 INFO o.s.w.s.h.AbstractHandlerMethodMapping$MappingRegistry[543]: Mapped "{[/env || /env.json],methods=[GET],produces=[application/vnd.spring-boot.actuator.v1+json || application/json]}" onto public java.lang.Object org.springframework.boot.actuate.endpoint.mvc.EndpointMvcAdapter.invoke()
+#2018-12-07 16:13:23 INFO o.s.w.s.h.AbstractHandlerMethodMapping$MappingRegistry[543]: Mapped "{[/resume || /resume.json],methods=[POST]}" onto public java.lang.Object org.springframework.cloud.endpoint.GenericPostableMvcEndpoint.invoke()
+#2018-12-07 16:13:23 INFO o.s.w.s.h.AbstractHandlerMethodMapping$MappingRegistry[543]: Mapped "{[/metrics/{name:.*}],methods=[GET],produces=[application/vnd.spring-boot.actuator.v1+json || application/json]}" onto public java.lang.Object org.springframework.boot.actuate.endpoint.mvc.MetricsMvcEndpoint.value(java.lang.String)
+#2018-12-07 16:13:23 INFO o.s.w.s.h.AbstractHandlerMethodMapping$MappingRegistry[543]: Mapped "{[/metrics || /metrics.json],methods=[GET],produces=[application/vnd.spring-boot.actuator.v1+json || application/json]}" onto public java.lang.Object org.springframework.boot.actuate.endpoint.mvc.EndpointMvcAdapter.invoke()
+#2018-12-07 16:13:23 INFO o.s.w.s.h.AbstractHandlerMethodMapping$MappingRegistry[543]: Mapped "{[/trace || /trace.json],methods=[GET],produces=[application/vnd.spring-boot.actuator.v1+json || application/json]}" onto public java.lang.Object org.springframework.boot.actuate.endpoint.mvc.EndpointMvcAdapter.invoke()
+#2018-12-07 16:13:23 INFO o.s.w.s.h.AbstractHandlerMethodMapping$MappingRegistry[543]: Mapped "{[/autoconfig || /autoconfig.json],methods=[GET],produces=[application/vnd.spring-boot.actuator.v1+json || application/json]}" onto public java.lang.Object org.springframework.boot.actuate.endpoint.mvc.EndpointMvcAdapter.invoke()
+#2018-12-07 16:13:23 INFO o.s.w.s.h.AbstractHandlerMethodMapping$MappingRegistry[543]: Mapped "{[/env],methods=[POST]}" onto public java.lang.Object org.springframework.cloud.context.environment.EnvironmentManagerMvcEndpoint.value(java.util.Map<java.lang.String, java.lang.String>)
+          ###############################      提供的13个接口        ##########################   
+  
+############################################    Actuator  ##############################################################################
+  
+  
   
