--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,20 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		
+		<!-- querydsl -->
+		<dependency>
+    		<groupId>com.querydsl</groupId>
+    		<artifactId>querydsl-jpa</artifactId>
+    		<version>${querydsl.version}</version>
+  		</dependency>
+  		<dependency>
+    		<groupId>com.querydsl</groupId>
+    		<artifactId>querydsl-apt</artifactId>
+    		<version>${querydsl.version}</version>
+    		<scope>provided</scope>
+  		</dependency>
+		<!-- querydsl -->
+		
 		<!-- mysql -->
 		<dependency>
 			<groupId>mysql</groupId>
@@ -367,6 +381,31 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			
+			<!--添加QueryDSL插件支持-->
+            <plugin>
+                <groupId>com.mysema.maven</groupId>
+                <artifactId>apt-maven-plugin</artifactId>
+                <version>1.1.3</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>process</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>target/generated-sources/java</outputDirectory>
+                            <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            
+           	<!-- 插件列表内的第一个插件是SpringBoot为我们自动自动添加的，
+           	是SpringBoot相关maven的依赖插件。而下面的插件就是我们添加的相关QueryDSL的插件，
+           	该插件会自动扫描项目内配置了@Entity的实体类，
+           	并根据实体的内定义的字段以及关联类通过JPAAnnotationProcessor自动创建Q[实体类名称]的查询实体，
+           	创建完成后会将实体存放到我们配置outputDirectory属性目录下。 -->
+			<!--添加QueryDSL插件支持-->
 		</plugins>
 	</build>
 
